--- a/voting/templates/voting/layout-admin.html
+++ b/voting/templates/voting/layout-admin.html
@@ -34,17 +34,18 @@ bootstrap theme.
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'dashboard' %}">Voting Admin</a>
+          <a class="navbar-brand" href="{% url 'voting_event_list' %}">Voting Admin</a>
         </div>
         <!-- /.navbar-header -->
 
+        <!-- top-right navigation bar -->
         <ul class="nav navbar-top-links navbar-right">
           <!-- /.dropdown -->
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
               <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
-            <ul class="dropdown-menu dropdown-user">
+            <ul class="dropdown-menu">
               <li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
               </li>
             </ul>
@@ -54,11 +55,12 @@ bootstrap theme.
         </ul>
         <!-- /.navbar-top-links -->
 
+        <!-- sidebar menu -->
         <div class="navbar-default sidebar" role="navigation">
           <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
               <li>
-                <a href="{% url 'dashboard' %}"><i class="fa fa-dashboard fa-fw"></i> {% trans "Dashboard" %}</a>
+                <a href="{% url 'voting_event_list' %}"><i class="fa fa-fw fa-list"></i> {% trans "Voting Events" %}</a>
               </li>
             </ul>
           </div>
