--- a/voting/templates/voting/voting_event_list.html
+++ b/voting/templates/voting/voting_event_list.html
@@ -22,9 +22,9 @@
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
-          <td>{% trans "Title" %}</td>
-          <td>{% trans "Expiration Date" %}</td>
-          <td>{% trans "Actions" %}</td>
+          <th>{% trans "Title" %}</th>
+          <th>{% trans "Expiration Date" %}</th>
+          <th>{% trans "Actions" %}</th>
         </tr>
       </thead>
       <tbody>
