--- a/voting/templates/voting/voter_list.html
+++ b/voting/templates/voting/voter_list.html
@@ -4,11 +4,47 @@
 {% block content %}
 
 <div class="row">
-	<div class="col-lg-12">
-	</div>
+  <div class="col-lg-12">
+    <h2>{% block title %}
+      {% blocktrans with event=voting_event.title %}Voters for {{ event }}{% endblocktrans %}
+      {% endblock %}</h2>
+    <a href="{{ voting_event.url_edit }}">
+      <i class="fa fa-fw fa-arrow-left"></i>
+      {% blocktrans with event=voting_event.title %}Back to {{ event }}{% endblocktrans %}
+    </a>
+  </div>
 </div>
 
 <div class="row">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">{% trans "Voters" %}</h3>
+    </div>
+    <div class="panel-body">
+      <p>
+        <table class="table table-striped table-bordered table-hover">
+          <thead>
+            <th>{% trans "Name" %}</th>
+            <th>{% trans "Voted" %}</th>
+          </thead>
+          <tbody>
+            {% for voter in voters %}
+            <tr>
+              <td>{{ voter.full_name }}</td>
+              <td>
+                {% if voter.voted %}
+                <i class="fa fa-fw fa-check" title="{% trans "Yes" %}"></i>
+                {% else %}
+                <i class="fa fa-fw fa-times" title="{% trans "No" %}"></i>
+                {% endif %}
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </p>
+    </div>
+  </div>
 </div>
 
 {% endblock content %}
