--- a/voting/templates/voting/vote.html
+++ b/voting/templates/voting/vote.html
@@ -3,12 +3,25 @@
 
 {% block content %}
 
-<h3>{% block title %}{% trans "Please vote for a candidate" %}{% endblock %}</h3>
+<h3>{% block title %}{% trans "Vote" %}{% endblock %}</h3>
+
+<p>{% blocktrans with name=voter.full_name %}Hello, {{name}}! Please vote for a candidate{% endblocktrans %}
+</p>
+
+{% if error %}
+<p>
+  {{ error }}
+</p>
+{% endif %}
 
 <form method="post">
-  {% csrf_token %}
-  <table>
-  </table>
+  <p>
+    {% csrf_token %}
+    {% for candidate in candidates %}
+    <input type="radio" name="choice" value="{{ candidate.pk }}">
+    {{ candidate.full_name }}<br>
+    {% endfor %}
+  </p>
   <button type="submit">{% trans "Submit" %}</button>
 </form>
 
