Add bootstrap and fontawesome to voting pages

--- a/voting/templates/voting/vote.html
+++ b/voting/templates/voting/vote.html
@@ -3,26 +3,40 @@
 
 {% block content %}
 
-<h3>{% block title %}{% trans "Vote" %}{% endblock %}</h3>
+<div class="row">
+  <div class="col-lg-12">
+    <h2>{% block title %}{{ event.title }}{% endblock %}</h3>
+  </div>
+</div>
 
-<p>{% blocktrans with name=voter.full_name %}Hello, {{name}}! Please vote for a candidate{% endblocktrans %}
-</p>
+<div class="row">
+  <div class="col-lg-12">
 
-{% if error %}
-<p>
-  {{ error }}
-</p>
-{% endif %}
+    {% if error %}
+    <div class="alert alert-info">
+      <i class="fa fa-fw fa-info-circle"></i>
+      {{ error }}
+    </div>
+    {% endif %}
 
-<form method="post">
-  <p>
-    {% csrf_token %}
-    {% for candidate in candidates %}
-    <input type="radio" name="choice" value="{{ candidate.pk }}">
-    {{ candidate.full_name }}<br>
-    {% endfor %}
-  </p>
-  <button type="submit">{% trans "Submit" %}</button>
-</form>
+    <form method="post">
+      {% csrf_token %}
+      <div class="container">
+        <p>
+          {% blocktrans with name=voter.full_name %}Hello, {{name}}! Please vote for a candidate{% endblocktrans %}
+        </p>
+        {% for candidate in candidates %}
+        <div class="radio">
+          <label>
+            <input type="radio" name="choice" value="{{ candidate.pk }}">
+            {{ candidate.full_name }}
+          </label>
+        </div>
+      {% endfor %}
+      </div>
+      <button class="btn btn-primary" type="submit">{% trans "Submit" %}</button>
+    </form>
+  </div>
+</div>
 
 {% endblock %}
