--- a/voting/templates/voting/layout.html
+++ b/voting/templates/voting/layout.html
@@ -1,10 +1,24 @@
+{% load staticfiles %}
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{% block title %}{% endblock %}</title>
+
+    <link href="{% static 'voting/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'voting/css/bootstrap-theme.min.css' %}" rel="stylesheet">
+    <link href="{% static 'voting/css/font-awesome.min.css' %}" rel="stylesheet">
+
   </head>
+
   <body>
+
+    <div class="container">
     {% block content %}
     {% endblock %}
+    </div>
   </body>
+
 </html>
