--- a/voting/templates/voting/welcome_page.html
+++ b/voting/templates/voting/welcome_page.html
@@ -3,14 +3,24 @@
 
 {% block content %}
 
-<h3>{% block title %}{% trans "Please input your information" %}{% endblock %}</h3>
+<div class="row">
+  <div class="col-lg-12">
+    <h2>{% block title %}{{ event.title }}{% endblock %}</h2>
+  </div>
+</div>
 
-<form method="post">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <button type="submit">{% trans "Submit" %}</button>
-</form>
+<div class="row">
+  <div class="col-lg-12">
+    <form method="post">
+      {% csrf_token %}
+      <p>
+        <table>
+          {{ form.as_table }}
+        </table>
+      </p>
+      <button class="btn btn-primary" type="submit">{% trans "Submit" %}</button>
+    </form>
+  </div>
+</div>
 
 {% endblock content %}
