Add cancel button to voting page

--- a/voting/templates/voting/vote.html
+++ b/voting/templates/voting/vote.html
@@ -35,6 +35,7 @@
       {% endfor %}
       </div>
       <button class="btn btn-primary" type="submit">{% trans "Submit" %}</button>
+      <button name="cancel" class="btn btn-default" type="submit">{% trans "Cancel" %}</button>
     </form>
   </div>
 </div>
