--- a/voting/templates/voting/voter_list.html
+++ b/voting/templates/voting/voter_list.html
@@ -42,6 +42,7 @@
               <td>
                 {% if voter.voted %}
                 <i class="fa fa-fw fa-check" title="{% trans "Yes" %}"></i>
+                ({{ voter.choice.full_name }})
                 {% else %}
                 <i class="fa fa-fw fa-times" title="{% trans "No" %}"></i>
                 {% endif %}
