--- a/voting/templates/voting/layout.html
+++ b/voting/templates/voting/layout.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load i18n %}
 <html>
   <head>
     <meta charset="UTF-8">
@@ -11,9 +12,38 @@
     <link href="{% static 'voting/css/bootstrap-theme.min.css' %}" rel="stylesheet">
     <link href="{% static 'voting/css/font-awesome.min.css' %}" rel="stylesheet">
 
+    <!-- navbar padding -->
+    <style>
+      body { padding-top: 70px; padding-bottom: 30px; }
+    </style>
+
   </head>
 
   <body>
+
+    <!-- navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">{% trans "Toggle navigation" %}</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">EE Voting</a>
+        </div>
+        <!-- ./navbar-header -->
+
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="{% url 'voting_event_list' %}"><i class="fa fa-fw fa-lock"></i>{% trans "Admin" %}</a></li>
+          </ul>
+        </div>
+        <!--/#navbar -->
+
+      </div>
+    </nav>
 
     <div class="container">
     {% block content %}
