--- a/voting/templates/voting/vote.html
+++ b/voting/templates/voting/vote.html
@@ -6,6 +6,9 @@
 <div class="row">
   <div class="col-lg-12">
     <h2>{% block title %}{{ event.title }}{% endblock %}</h3>
+    {% if event.description %}
+    <p>{{ event.description }}</p>
+    {% endif %}
   </div>
 </div>
 
@@ -21,7 +24,6 @@
 
     <form method="post">
       {% csrf_token %}
-      <div class="container">
         <p>
           {% blocktrans with name=voter.full_name %}Hello, {{name}}! Please vote for a candidate{% endblocktrans %}
         </p>
@@ -33,7 +35,6 @@
           </label>
         </div>
       {% endfor %}
-      </div>
       <button class="btn btn-primary" type="submit">{% trans "Submit" %}</button>
       <button name="cancel" class="btn btn-default" type="submit">{% trans "Cancel" %}</button>
     </form>
