--- a/voting/templates/voting/welcome_page.html
+++ b/voting/templates/voting/welcome_page.html
@@ -5,21 +5,27 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h2>{% block title %}{{ event.title }}{% endblock %}</h2>
-  </div>
-</div>
+    <div class="jumbotron">
+      <h2>{% trans "Welcome" %}</h2>
 
-<div class="row">
-  <div class="col-lg-12">
-    <form method="post">
-      {% csrf_token %}
       <p>
-        <table>
-          {{ form.as_table }}
-        </table>
+        {% blocktrans %} Welcome to NCTU EE voting system. Please input your username and passphrase to continue.{% endblocktrans %}
       </p>
-      <button class="btn btn-primary" type="submit">{% trans "Submit" %}</button>
-    </form>
+
+      <form method="post">
+        {% csrf_token %}
+        <p>
+          <table>
+            {{ form.as_table }}
+          </table>
+        </p>
+        <button class="btn btn-primary pull-right" type="submit">
+          {% trans "Continue" %}
+          <i class="fa fa-angle-double-right"></i>
+        </button>
+      </form>
+
+    </div>
   </div>
 </div>
 
