--- a/voting/templates/voting/add_voter_wizard.html
+++ b/voting/templates/voting/add_voter_wizard.html
@@ -1,5 +1,6 @@
 {% extends 'voting/layout-admin.html' %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -13,18 +14,18 @@
   <div class="col-lg-12">
 
     <p>{% blocktrans with step=wizard.steps.step1 total=wizard.steps.count%}Step {{ step }} of {{ total }}{% endblocktrans %}</p>
-    <form action="" method="post">
+    <form method="post">
       {% csrf_token %}
       <p>
         <table>
-          {{ wizard.management_form }}
+          {{ wizard.management_form|crispy }}
           {% if wizard.form.forms %}
-          {{ wizard.form.management_form }}
+          {{ wizard.form.management_form|crispy }}
           {% for form in wizard.form.forms %}
-          {{ form }}
+          {{ form|crispy }}
           {% endfor %}
           {% else %}
-          {{ wizard.form }}
+          {{ wizard.form|crispy }}
           {% endif %}
         </table>
       </p>
