--- a/voting/templates/voting/candidate_create.html
+++ b/voting/templates/voting/candidate_create.html
@@ -1,5 +1,6 @@
 {% extends 'voting/layout-admin.html' %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -15,7 +16,7 @@
     <form method="post">
       {% csrf_token %}
       <table>
-        {{ form.as_table }}
+        {{ form|crispy }}
       </table>
       <input class="btn btn-primary" type="submit" value="{% trans "Create" %}">
     </form>
