--- a/voting/templates/voting/candidate_edit.html
+++ b/voting/templates/voting/candidate_edit.html
@@ -1,5 +1,6 @@
 {% extends 'voting/layout-admin.html' %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -13,11 +14,7 @@
   <div class="col-lg-12">
     <form method="post">
       {% csrf_token %}
-      <p>
-        <table>
-          {{ form.as_table }}
-        </table>
-      </p>
+      {{ form|crispy }}
       <button class="btn btn-primary" type="submit">{% trans "Save Changes" %}</button>
     </form>
   </div>
