--- a/voting/templates/voting/voting_event_create.html
+++ b/voting/templates/voting/voting_event_create.html
@@ -1,5 +1,6 @@
 {% extends 'voting/layout-admin.html' %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -15,9 +16,9 @@
     <form method="post">
       {% csrf_token %}
       <table>
-        {{ form.as_table }}
+        {{ form|crispy }}
       </table>
-      <input class="btn btn-default" type="submit" value="{% trans "Create"  %}">
+      <input class="btn btn-primary" type="submit" value="{% trans "Create"  %}">
     </form>
   </div>
 
