--- a/voting/templates/voting/layout-admin.html
+++ b/voting/templates/voting/layout-admin.html
@@ -35,7 +35,7 @@ bootstrap theme.
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'voting_event_list' %}">Voting Admin</a>
+          <a class="navbar-brand" href="{% url 'voting_event_list' %}">EE Voting Admin</a>
         </div>
         <!-- /.navbar-header -->
 
