--- a/voting/templates/voting/layout.html
+++ b/voting/templates/voting/layout.html
@@ -11,6 +11,7 @@
     <link href="{% static 'voting/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'voting/css/bootstrap-theme.min.css' %}" rel="stylesheet">
     <link href="{% static 'voting/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'voting/css/style.css' %}" rel="stylesheet">
 
     <!-- navbar padding -->
     <style>
