welcome_page: center title and description

--- a/voting/templates/voting/welcome_page.html
+++ b/voting/templates/voting/welcome_page.html
@@ -7,10 +7,10 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="jumbotron">
-      <h2>{% trans "Welcome" %}</h2>
+      <h2 class="text-center">{% trans "Welcome to NCTU EE Voting" %}</h2>
 
-      <p>
-        {% blocktrans %} Welcome to NCTU EE voting system. Please input your username and passphrase to continue.{% endblocktrans %}
+      <p class="text-center">
+        {% blocktrans %}Please input your username and passphrase to continue.{% endblocktrans %}
       </p>
 
       <form id="welcome-page-signin" method="post">
