Fix potential localization problems

--- a/voting/templates/voting/voter_list.html
+++ b/voting/templates/voting/voter_list.html
@@ -31,6 +31,7 @@
             <th>{% trans "Name" %}</th>
             <th>{% trans "Username" %}</th>
             <th>{% trans "Passphrase" %}</th>
+            {# Translators: Has the user voted yet? Yes or no. #}
             <th>{% trans "Voted" %}</th>
           </thead>
           <tbody>
