--- a/voting/templates/voting/welcome_page.html
+++ b/voting/templates/voting/welcome_page.html
@@ -4,18 +4,19 @@
 
 {% block content %}
 
-<div class="row">
-  <div class="col-lg-12">
-    <div class="jumbotron">
+<div class="well">
+  <div class="row">
+    <div class="col-lg-7">
       <h2 class="text-center">{% trans "Welcome to NCTU EE Voting" %}</h2>
 
-      <p class="text-center">
-        {% blocktrans %}Please input your username and passphrase to continue.{% endblocktrans %}
-      </p>
+    </div>
+
+    <div class="col-lg-5">
 
       <form id="welcome-page-signin" method="post">
         {% csrf_token %}
         <p>
+          {% blocktrans %}Please input your username and passphrase:{% endblocktrans %}
           {{ form|crispy }}
         </p>
 
@@ -33,7 +34,8 @@
       </form>
 
     </div>
+
   </div>
 </div>
 
-{% endblock content %}
+  {% endblock content %}
