Implement tabbed navigation for voting event settings
Create a common ancestor for templates that takes an VotingEvent as an
argument:

- voting_event_edit.html
- voting_event_status.html
- voter_list.html

The templates listed above all extend `layout-admin-event.html`, which
contains the navigation tabs. A custom template tag "navlink" is
developed for rendering the links.

--- a/voting/templates/voting/layout-admin.html
+++ b/voting/templates/voting/layout-admin.html
@@ -77,6 +77,8 @@ bootstrap theme.
 
       <!-- Page Content -->
       <div id="page-wrapper">
+        {% block pre-content %}
+        {% endblock %}
         {% block content %}
         {% endblock %}
       </div>
