--- a/voting/templates/voting/voting_event_edit.html
+++ b/voting/templates/voting/voting_event_edit.html
@@ -1,14 +1,8 @@
-{% extends 'voting/layout-admin.html' %}
+{% extends 'voting/layout-admin-event.html' %}
 {% load i18n %}
 {% load crispy_forms_tags %}
 
 {% block content %}
-
-<div class="row">
-  <div class="col-lg-12">
-    <h2 class="page-header">{% block title %}{% trans "Edit Voting Event" %}{% endblock %}</h2>
-  </div>
-</div>
 
 <div class="row">
 
