--- a/voting/templates/voting/voting_event_status.html
+++ b/voting/templates/voting/voting_event_status.html
@@ -1,13 +1,7 @@
-{% extends 'voting/layout-admin.html' %}
+{% extends 'voting/layout-admin-event.html' %}
 {% load i18n %}
 
 {% block content %}
-
-<div class="row">
-  <div class="col-lg-12">
-    <h2>{% block title %}{{ voting_event.title }}{% endblock %}</h2>
-  </div>
-</div>
 
 <div class="row">
   
@@ -20,7 +14,7 @@
 
   <!-- candidates list -->
   <div class="col-lg-6">
-    <h3>{% trans "Candidates" %}
+    <h3>{% trans "Candidates" %}</h3>
     <p>
       <table class="table table-striped table-bordered table-hover">
         <thead>
