--- a/voting/templates/voting/layout-admin.html
+++ b/voting/templates/voting/layout-admin.html
@@ -66,7 +66,10 @@ bootstrap theme.
           <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
               <li>
-                <a href="{% url 'voting_event_list' %}"><i class="fa fa-fw fa-list"></i> {% trans "Voting Events" %}</a>
+                <a href="{% url 'voting_event_list' %}"><i class="fa fa-fw fa-list"></i> {% trans "Voting Event List" %}</a>
+              </li>
+              <li>
+                <a href="{% url 'voting_event_create' %}"><i class="fa fa-fw fa-plus"></i> {% trans "Create Voting Event" %}</a>
               </li>
             </ul>
           </div>
