--- a/voting/templates/voting/layout.html
+++ b/voting/templates/voting/layout.html
@@ -50,6 +50,9 @@
     {% block content %}
     {% endblock %}
     </div>
+
+    <script src="{% static 'voting/js/jquery.min.js' %}"></script>
+    <script src="{% static 'voting/js/bootstrap.min.js' %}"></script>
   </body>
 
 </html>
