Modify to match the changed specification
The new specification dictates that the voter should be able to choose
"Agree" or "Disagree" for each candidate. Following is the new spec:

(1)每位候選人均有同意及不同意二個選項供投票者點選，並加註文字說明如下：對每位候選人行使同意票，可點選同意或不
同意，請於點選欄裡點選。若不點選則視為不同意。可兩位皆點選同意或兩位皆點選不同意、或點選一位同意一位不同意。

(3)紀錄投票完成的時間。

(4)後台不能查到特定投票者的投票內容。

--- a/voting/templates/voting/vote.html
+++ b/voting/templates/voting/vote.html
@@ -30,8 +30,12 @@
         {% for candidate in candidates %}
         <div class="radio">
           <label>
-            <input type="radio" name="choice" value="{{ candidate.pk }}">
             {{ candidate.full_name }}
+            <select class="form-control" name="candidate_{{ candidate.pk }}">
+              <option class="form-control" value="N">{% trans "Not Selected" %}</option>
+              <option class="form-control" value="A">{% trans "Agree" %}</option>
+              <option class="form-control" value="D">{% trans "Disagree" %}</option>
+            </select>
           </label>
         </div>
       {% endfor %}
