--- a/voting/templates/voting/voting_event_status.html
+++ b/voting/templates/voting/voting_event_status.html
@@ -4,17 +4,12 @@
 {% block content %}
 
 <div class="row">
-  
-  <!-- chart -->
-  <div class="col-lg-6">
-    <p>
-      <div id="candidate-chart" style="height: 250px"></div>
-    </p>
-  </div>
 
-  <!-- candidates list -->
   <div class="col-lg-6">
-    <h3>{% trans "Candidates" %}</h3>
+    <h3>{% trans "Agree Votes" %}</h3>
+    <p>
+      <div id="candidate-chart-agree" style="height: 250px"></div>
+    </p>
     <p>
       <table class="table table-striped table-bordered table-hover">
         <thead>
@@ -26,7 +21,32 @@
           {% for candidate in candidates %}
           <tr>
             <td>{{ candidate.full_name }}</td>
-            <td>{{ candidate.voters.all.count }}</td>
+            <td>{{ candidate.agree_votes.count }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </p>
+  </div>
+
+  <!-- candidates list -->
+  <div class="col-lg-6">
+    <h3>{% trans "Disagree Votes" %}</h3>
+    <p>
+      <div id="candidate-chart-disagree" style="height: 250px"></div>
+    </p>
+    <p>
+      <table class="table table-striped table-bordered table-hover">
+        <thead>
+          <th>{% trans "Name" %}</th>
+          {# Translators: Noun. Number of votes. #}
+          <th>{% trans "Votes" %}</th>
+        </thead>
+        <tbody>
+          {% for candidate in candidates %}
+          <tr>
+            <td>{{ candidate.full_name }}</td>
+            <td>{{ candidate.disagree_votes.count }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -42,10 +62,18 @@
 <!-- draw charts -->
 <script>
   Morris.Donut({
-    element: 'candidate-chart',
+    element: 'candidate-chart-agree',
     data: [
     {% for candidate in candidates %}
-      {label: "{{ candidate }}", value: {{ candidate.voters.all.count }}},
+    {label: "{{ candidate }}", value: {{ candidate.agree_votes.count }}},
+    {% endfor %}
+    ]
+  });
+  Morris.Donut({
+    element: 'candidate-chart-disagree',
+    data: [
+    {% for candidate in candidates %}
+    {label: "{{ candidate }}", value: {{ candidate.disagree_votes.count }}},
     {% endfor %}
     ]
   });
