--- a/voting/templates/voting/layout.html
+++ b/voting/templates/voting/layout.html
@@ -53,6 +53,7 @@
 
     <script src="{% static 'voting/js/jquery.min.js' %}"></script>
     <script src="{% static 'voting/js/bootstrap.min.js' %}"></script>
+    {% block scripts %}{% endblock %}
   </body>
 
 </html>
