end_message: add a link to return to homepage

--- a/voting/templates/voting/end_message.html
+++ b/voting/templates/voting/end_message.html
@@ -5,4 +5,7 @@
 <p>
   {% blocktrans %}Your vote has been saved. Thanks for using this site{% endblocktrans %}
 </p>
+<p>
+  <a class="btn btn-primary" href="{% url 'welcome_page' %}">{% trans "Back to homepage" %}</a>
+</p>
 {% endblock content %}
