welcome_page: add error message for internet explorer version < 9

--- a/voting/templates/voting/welcome_page.html
+++ b/voting/templates/voting/welcome_page.html
@@ -9,6 +9,16 @@
     <div class="col-lg-7">
       <h2 class="text-center">{% trans "Welcome to NCTU EE Voting" %}</h2>
 
+      <!--[if lt IE 9]>
+      <p class="alert alert-danger">
+        <i class="fa fa-fw fa-exclamation-triangle"></i>
+        {% blocktrans %}This site is incompatible with the browser you are using.
+        Please use Internet Explorer 9+ or upgrade to a standard-comformant
+        browser like Firefox or Chrome/Chromium.
+        {% endblocktrans %}
+      </p>
+      <![endif]-->
+
     </div>
 
     <div class="col-lg-5">
