--- a/voting/templates/voting/layout-admin.html
+++ b/voting/templates/voting/layout-admin.html
@@ -39,6 +39,10 @@ bootstrap theme.
         </div>
         <!-- /.navbar-header -->
 
+        <ul class="nav navbar-top-links navbar-left">
+          <li><a href="{% url "welcome_page" %}">{% trans "Voting Page" %}</a></li>
+        </ul>
+
         <!-- top-right navigation bar -->
         <ul class="nav navbar-top-links navbar-right">
           <!-- /.dropdown -->
